2008-05-30  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config.guess, config.sub: Updated to latest version.

2008-05-25  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed cases where ./configure wouldn't detect that the compiler
	supported auto-dependencies.
	* configure.ac: Fixed regular expression to determine the 
	GCC version.  If was failing when the string terminated at
	the minor version.
	* configure: Regenerated.

2008-05-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed occasional spurious rebuilds of Info-gnustep.plist and
	Info.plist files.
	* Instance/bundle.make (build-bundle): Swapped the order of the
	shared-instance-bundle-all and $(BUNDLE_INFO_PLIST_FILE)
	dependencies.
	(Info.plist, Info-gnustep.plist): Do not depend on building the
	directory containing the plist file first.
	* Instance/framework.make (Info.plist, Info-gnustep.plist): Do not
	depend on creating the directory containing the plist file first.
	
2008-05-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	* messages.make (ECHO_UPDATING_VERSION_SYMLINK): Added definition
	for messages=no.  (ECHO_CREATING_STAMP_FILE): New variable.
	* Instance/Shared/stamp-string.make
	(shared-instance-stamp-string): Use ECHO_CREATING_STAMP_FILE
	instead of ECHO_NOTHING.

2008-05-24  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed occasional spurious rebuilds of framework headers; improved
	display of messages when building framework headers.
	* Instance/framework.make (internal-framework-build-headers):
	Depend on $(FRAMEWORK_VERSION_DIR)/Headers.
	($(FRAMEWORK_VERSION_DIR)/Headers/%.h): Do not depend on
	$(FRAMEWORK_VERSION_DIR)/Headers.
	(build-framework-dirs): Do not depend on
	$(FRAMEWORK_VERSION_DIR)/Headers.
	* Instance/subproject.make (internal-subproject-build-headers):
	Depend on $(OWNING_PROJECT_HEADER_DIR).
	($(OWNING_PROJECT_HEADER_DIR)/%.h): Do not depend on
	$(OWNING_PROJECT_HEADER_DIR).
	
	* Instance/framework.make ($(FRAMEWORK_DIR)/Versions/Current): Use